--- a/InformativeLearner.html
+++ b/InformativeLearner.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
- <html>
- <head> <title>Learners Vault</title> 
+<html>
+
+<head>
+<title>Learner's Vault</title>
 </head>
- <body>
- <h1>Welcome to My Website</h1> 
-<p>This is the content of my web page.</p>
- <a href="https://www.youtube.com/@InformativeLearner">Visit Channel</a> 
-<!-- Additional elements and content go here →
- </body>
- </html>
+
+<body>
+
+<h1>Welcome to My Page!</h1>
+<p>This is a website for me to keep track of knowledge i gain!</p>
+
+<h2>Important Dates</h2>
+<p><i>August ,1 2024</i> - The start</p>
+
+<h2>Links</h2>
+<p>Here is a link to my channel: <a href="https://www.youtube.com/@InformativeLearner">wikiHow</a></p>
+
+</body>
+</html>
